exports[`compile fixtures to snapshots: alternative-name.js 1`] = `
"import create from \"react-simple\";

const Foo = create(\"div\", {
    color: \"red\"
});
Foo.displayName = \"Foo\";"
`;

exports[`compile fixtures to snapshots: argument-shadow.js 1`] = `
"import simple from \"react-simple\";

function fn(simple) {
    var no = simple();
}

function outer(simple) {
    function inner() {
        var no = simple();
    }
}"
`;

exports[`compile fixtures to snapshots: assignment-only.js 1`] = `
"import simple from \"react-simple\";

var no = simple;"
`;

exports[`compile fixtures to snapshots: basic.js 1`] = `
"import simple from \"react-simple\";

const Foo = simple(\"div\", {
    color: \"red\"
});
Foo.displayName = \"Foo\";"
`;

exports[`compile fixtures to snapshots: custom.js 1`] = `
"import createComponent from \"other\";

const Foo = createComponent(\"div\", {
    color: \"red\"
});
Foo.displayName = \"Foo\";"
`;

exports[`compile fixtures to snapshots: declaration-shadow.js 1`] = `
"import simple from \"react-simple\";

function fn() {
    const simple = () => null;
    var no = simple();
}

function outer() {
    const simple = () => null;
    function inner() {
        var no = simple();
    }
}"
`;

exports[`compile fixtures to snapshots: export.js 1`] = `
"import simple from \"react-simple\";

export const Foo = simple(\"div\", {
    color: \"red\"
});
Foo.displayName = \"Foo\";"
`;

exports[`compile fixtures to snapshots: inside-function.js 1`] = `
"import simple from \"react-simple\";

function fn() {
    const Foo = simple(\"div\", {
        color: \"red\"
    });
    Foo.displayName = \"Foo\";
}

function outer() {
    function inner() {
        const Foo = simple(\"div\", {
            color: \"red\"
        });
        Foo.displayName = \"Foo\";
    }
}"
`;

exports[`compile fixtures to snapshots: named-export.js 1`] = `
"import { createComponent, no } from \"amodule\";

const Foo = createComponent(\"div\", {
    color: \"red\"
});

Foo.displayName = \"Foo\";
var nope = no();"
`;

exports[`compile fixtures to snapshots: named-export-as.js 1`] = `
"import { createComponent as other, no } from \"amodule\";

const Foo = other(\"div\", {
    color: \"red\"
});

Foo.displayName = \"Foo\";
var nope = no();"
`;
